project-fortis-interfaces/src/styles/Insights/SentimentTreeView.css
.tagFilterRow{
    padding: 0 35px 10px;
}

.panel-selector{
      padding-bottom: 0px!important;
      background-color: rgb(63, 63, 79)!important;
      border: 0px;
}

.form-control {
    background-color: transparent;
    border-width: 0;
    border-bottom-width: 1px;
    border-color: #ccc;
    border-color: rgba(240, 240, 240, 0.2);
    border-radius: 0;
    color: #fefefe;
    outline: none;
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    box-shadow: none !important;
} 

.input-group .form-control.edgeFilterInput {
    width: 250px;
}

.edgeFilterInput.edgeFilterInput {
    text-overflow: ellipsis;
    border-radius: 0;
    height: 30px;
}

.badge{
    font-size: 10px;
    background-color: #337ab7!important;
    padding: 3px 4px;
    border: 1px solid #a3a3b3;
    margin-left: 5px;
}

.relevantTerm:hover{
    text-decoration: underline;
}

.badge-disabled{
    color: #a3a3b3!important;
    background-color: #333!important;
    padding: 3px 4px;
    margin-left: 5px;
}

#edge-filter-icon {
    width: 24px;
}

